src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> USE ID SEMICOLON
Rule 5     declaration -> PACKAGE ID SEMICOLON
Rule 6     declaration -> SUB ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK
Rule 7     declaration -> statement SEMICOLON
Rule 8     declaration -> command
Rule 9     param_list -> var_type comma_var_type
Rule 10    param_list -> empty
Rule 11    comma_var_type -> comma_var_type COMMA var_type
Rule 12    comma_var_type -> COMMA var_type
Rule 13    comma_var_type -> empty
Rule 14    var_type -> DOLLAR ID
Rule 15    var_type -> AT ID
Rule 16    var_type -> PERCENT ID
Rule 17    assign_type -> ASSIGN
Rule 18    assign_type -> PLUS_ASSIGN
Rule 19    assign_type -> MINUS_ASSIGN
Rule 20    assign_type -> MULTIPLY_ASSIGN
Rule 21    assign_type -> DIVIDE_ASSIGN
Rule 22    assign_type -> MOD_ASSIGN
Rule 23    assign_type -> POW_ASSIGN
Rule 24    statement_list -> statement_list statement SEMICOLON
Rule 25    statement_list -> statement SEMICOLON
Rule 26    statement_list -> empty
Rule 27    statement_list -> statement_list command
Rule 28    statement_list -> command
Rule 29    statement -> var_declaration
Rule 30    statement -> var_assignment
Rule 31    var_declaration -> MY var_type
Rule 32    var_declaration -> MY var_type assign_type expression
Rule 33    var_declaration -> MY LPAREN param_list RPAREN
Rule 34    var_declaration -> MY LPAREN param_list RPAREN assign_type expression
Rule 35    var_declaration -> MY var_type assign_type LPAREN expression_list RPAREN
Rule 36    var_declaration -> MY LPAREN param_list RPAREN assign_type LPAREN expression_list RPAREN
Rule 37    var_assignment -> var_type assign_type expression
Rule 38    var_assignment -> var_type LBRACKET expression RBRACKET assign_type expression
Rule 39    var_assignment -> var_type assign_type LPAREN expression_list RPAREN
Rule 40    var_assignment -> LPAREN param_list RPAREN assign_type LPAREN expression_list RPAREN
Rule 41    statement -> RETURN LPAREN expression_list RPAREN
Rule 42    command -> IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK
Rule 43    command -> IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK ELSE LBLOCK statement_list RBLOCK
Rule 44    statement -> PRINT STRING
Rule 45    command -> WHILE LPAREN relop RPAREN LBLOCK statement_list RBLOCK
Rule 46    command -> FOR LPAREN var_declaration SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK
Rule 47    command -> FOR LPAREN var_assignment SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK
Rule 48    statement -> ID LPAREN expression_list RPAREN
Rule 49    statement -> AMPERSANT ID LPAREN expression_list RPAREN
Rule 50    expression_list -> expression comma_expression
Rule 51    expression_list -> empty
Rule 52    comma_expression -> comma_expression COMMA expression
Rule 53    comma_expression -> COMMA expression
Rule 54    comma_expression -> empty
Rule 55    expression -> expression PLUS expression
Rule 56    expression -> expression MINUS expression
Rule 57    expression -> expression TIMES expression
Rule 58    expression -> expression DIVIDE expression
Rule 59    expression -> expression MODULUS expression
Rule 60    expression -> INTEGER
Rule 61    expression -> HEX
Rule 62    expression -> FLOAT
Rule 63    expression -> STRING
Rule 64    expression -> LPAREN expression RPAREN
Rule 65    expression -> ID LPAREN expression_list RPAREN
Rule 66    expression -> DOLLAR ID LBRACKET expression RBRACKET
Rule 67    expression -> var_type
Rule 68    expression -> MINUS expression
Rule 69    expression -> PLUS expression
Rule 70    relop -> relop_number
Rule 71    relop -> relop_string
Rule 72    relop_number -> expression ISEQUAL expression
Rule 73    relop_number -> expression NOTEQUAL expression
Rule 74    relop_number -> expression GREATER expression
Rule 75    relop_number -> expression GREATEREQUAL expression
Rule 76    relop_number -> expression LESS expression
Rule 77    relop_number -> expression LESSEQUAL expression
Rule 78    relop_number -> expression COMP expression
Rule 79    relop -> relop AND relop
Rule 80    relop -> relop OR relop
Rule 81    relop -> NOT relop
Rule 82    relop_string -> expression ISEQUAL_STRING expression
Rule 83    relop_string -> expression NOTEQUAL_STRING expression
Rule 84    relop_string -> expression GREATER_STRING expression
Rule 85    relop_string -> expression GREATEREQUAL_STRING expression
Rule 86    relop_string -> expression LESS_STRING expression
Rule 87    relop_string -> expression LESSEQUAL_STRING expression
Rule 88    relop_string -> expression COMP_STRING expression
Rule 89    empty -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 49
AND                  : 79
ASSIGN               : 17
AT                   : 15
COMMA                : 11 12 52 53
COMP                 : 78
COMP_STRING          : 88
DIVIDE               : 58
DIVIDE_ASSIGN        : 21
DOLLAR               : 14 66
ELSE                 : 43
FLOAT                : 62
FOR                  : 46 47
GREATER              : 74
GREATEREQUAL         : 75
GREATEREQUAL_STRING  : 85
GREATER_STRING       : 84
HEX                  : 61
ID                   : 4 5 6 14 15 16 48 49 65 66
IF                   : 42 43
INTEGER              : 60
ISEQUAL              : 72
ISEQUAL_STRING       : 82
LBLOCK               : 6 42 43 43 45 46 47
LBRACKET             : 38 66
LESS                 : 76
LESSEQUAL            : 77
LESSEQUAL_STRING     : 87
LESS_STRING          : 86
LPAREN               : 6 33 34 35 36 36 39 40 40 41 42 43 45 46 47 48 49 64 65
MINUS                : 56 68
MINUS_ASSIGN         : 19
MODULUS              : 59
MOD_ASSIGN           : 22
MULTIPLY_ASSIGN      : 20
MY                   : 31 32 33 34 35 36
NOT                  : 81
NOTEQUAL             : 73
NOTEQUAL_STRING      : 83
OR                   : 80
PACKAGE              : 5
PERCENT              : 16
PLUS                 : 55 69
PLUS_ASSIGN          : 18
POW_ASSIGN           : 23
PRINT                : 44
RBLOCK               : 6 42 43 43 45 46 47
RBRACKET             : 38 66
RETURN               : 41
RPAREN               : 6 33 34 35 36 36 39 40 40 41 42 43 45 46 47 48 49 64 65
SEMICOLON            : 4 5 7 24 25 46 46 47 47
STRING               : 44 63
SUB                  : 6
TIMES                : 57
USE                  : 4
WHILE                : 45
error                : 

Nonterminals, with rules where they appear

assign_type          : 32 34 35 36 37 38 39 40
comma_expression     : 50 52
comma_var_type       : 9 11
command              : 8 27 28
declaration          : 2 3
declaration_list     : 1 2
empty                : 10 13 26 51 54
expression           : 32 34 37 38 38 50 52 53 55 55 56 56 57 57 58 58 59 59 64 66 68 69 72 72 73 73 74 74 75 75 76 76 77 77 78 78 82 82 83 83 84 84 85 85 86 86 87 87 88 88
expression_list      : 35 36 39 40 41 48 49 65
param_list           : 6 33 34 36 40
program              : 0
relop                : 42 43 45 46 47 79 79 80 80 81
relop_number         : 70
relop_string         : 71
statement            : 7 24 25
statement_list       : 6 24 27 42 43 43 45 46 47
var_assignment       : 30 46 47 47
var_declaration      : 29 46
var_type             : 9 11 12 31 32 35 37 38 39 67

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . USE ID SEMICOLON
    (5) declaration -> . PACKAGE ID SEMICOLON
    (6) declaration -> . SUB ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK
    (7) declaration -> . statement SEMICOLON
    (8) declaration -> . command
    (29) statement -> . var_declaration
    (30) statement -> . var_assignment
    (41) statement -> . RETURN LPAREN expression_list RPAREN
    (44) statement -> . PRINT STRING
    (48) statement -> . ID LPAREN expression_list RPAREN
    (49) statement -> . AMPERSANT ID LPAREN expression_list RPAREN
    (42) command -> . IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK
    (43) command -> . IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK ELSE LBLOCK statement_list RBLOCK
    (45) command -> . WHILE LPAREN relop RPAREN LBLOCK statement_list RBLOCK
    (46) command -> . FOR LPAREN var_declaration SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK
    (47) command -> . FOR LPAREN var_assignment SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK
    (31) var_declaration -> . MY var_type
    (32) var_declaration -> . MY var_type assign_type expression
    (33) var_declaration -> . MY LPAREN param_list RPAREN
    (34) var_declaration -> . MY LPAREN param_list RPAREN assign_type expression
    (35) var_declaration -> . MY var_type assign_type LPAREN expression_list RPAREN
    (36) var_declaration -> . MY LPAREN param_list RPAREN assign_type LPAREN expression_list RPAREN
    (37) var_assignment -> . var_type assign_type expression
    (38) var_assignment -> . var_type LBRACKET expression RBRACKET assign_type expression
    (39) var_assignment -> . var_type assign_type LPAREN expression_list RPAREN
    (40) var_assignment -> . LPAREN param_list RPAREN assign_type LPAREN expression_list RPAREN
    (14) var_type -> . DOLLAR ID
    (15) var_type -> . AT ID
    (16) var_type -> . PERCENT ID

    USE             shift and go to state 4
    PACKAGE         shift and go to state 6
    SUB             shift and go to state 7
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 5
    AMPERSANT       shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    MY              shift and go to state 19
    LPAREN          shift and go to state 8
    DOLLAR          shift and go to state 21
    AT              shift and go to state 22
    PERCENT         shift and go to state 23

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    statement                      shift and go to state 9
    command                        shift and go to state 10
    var_declaration                shift and go to state 11
    var_assignment                 shift and go to state 12
    var_type                       shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . USE ID SEMICOLON
    (5) declaration -> . PACKAGE ID SEMICOLON
    (6) declaration -> . SUB ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK
    (7) declaration -> . statement SEMICOLON
    (8) declaration -> . command
    (29) statement -> . var_declaration
    (30) statement -> . var_assignment
    (41) statement -> . RETURN LPAREN expression_list RPAREN
    (44) statement -> . PRINT STRING
    (48) statement -> . ID LPAREN expression_list RPAREN
    (49) statement -> . AMPERSANT ID LPAREN expression_list RPAREN
    (42) command -> . IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK
    (43) command -> . IF LPAREN relop RPAREN LBLOCK statement_list RBLOCK ELSE LBLOCK statement_list RBLOCK
    (45) command -> . WHILE LPAREN relop RPAREN LBLOCK statement_list RBLOCK
    (46) command -> . FOR LPAREN var_declaration SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK
    (47) command -> . FOR LPAREN var_assignment SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK
    (31) var_declaration -> . MY var_type
    (32) var_declaration -> . MY var_type assign_type expression
    (33) var_declaration -> . MY LPAREN param_list RPAREN
    (34) var_declaration -> . MY LPAREN param_list RPAREN assign_type expression
    (35) var_declaration -> . MY var_type assign_type LPAREN expression_list RPAREN
    (36) var_declaration -> . MY LPAREN param_list RPAREN assign_type LPAREN expression_list RPAREN
    (37) var_assignment -> . var_type assign_type expression
    (38) var_assignment -> . var_type LBRACKET expression RBRACKET assign_type expression
    (39) var_assignment -> . var_type assign_type LPAREN expression_list RPAREN
    (40) var_assignment -> . LPAREN param_list RPAREN assign_type LPAREN expression_list RPAREN
    (14) var_type -> . DOLLAR ID
    (15) var_type -> . AT ID
    (16) var_type -> . PERCENT ID

    $end            reduce using rule 1 (program -> declaration_list .)
    USE             shift and go to state 4
    PACKAGE         shift and go to state 6
    SUB             shift and go to state 7
    RETURN          shift and go to state 13
    PRINT           shift and go to state 14
    ID              shift and go to state 5
    AMPERSANT       shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    MY              shift and go to state 19
    LPAREN          shift and go to state 8
    DOLLAR          shift and go to state 21
    AT              shift and go to state 22
    PERCENT         shift and go to state 23

    declaration                    shift and go to state 24
    statement                      shift and go to state 9
    command                        shift and go to state 10
    var_declaration                shift and go to state 11
    var_assignment                 shift and go to state 12
    var_type                       shift and go to state 20

state 3

    (3) declaration_list -> declaration .

    USE             reduce using rule 3 (declaration_list -> declaration .)
    PACKAGE         reduce using rule 3 (declaration_list -> declaration .)
    SUB             reduce using rule 3 (declaration_list -> declaration .)
    RETURN          reduce using rule 3 (declaration_list -> declaration .)
    PRINT           reduce using rule 3 (declaration_list -> declaration .)
    ID              reduce using rule 3 (declaration_list -> declaration .)
    AMPERSANT       reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    MY              reduce using rule 3 (declaration_list -> declaration .)
    LPAREN          reduce using rule 3 (declaration_list -> declaration .)
    DOLLAR          reduce using rule 3 (declaration_list -> declaration .)
    AT              reduce using rule 3 (declaration_list -> declaration .)
    PERCENT         reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> USE . ID SEMICOLON

    ID              shift and go to state 25


state 5

    (48) statement -> ID . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 26


state 6

    (5) declaration -> PACKAGE . ID SEMICOLON

    ID              shift and go to state 27


state 7

    (6) declaration -> SUB . ID LPAREN param_list RPAREN LBLOCK statement_list RBLOCK

    ID              shift and go to state 28


state 8

    (40) var_assignment -> LPAREN . param_list RPAREN assign_type LPAREN expression_list RPAREN
    (9) param_list -> . var_type comma_var_type
    (10) param_list -> . empty
    (14) var_type -> . DOLLAR ID
    (15) var_type -> . AT ID
    (16) var_type -> . PERCENT ID
    (89) empty -> .

    DOLLAR          shift and go to state 21
    AT              shift and go to state 22
    PERCENT         shift and go to state 23
    RPAREN          reduce using rule 89 (empty -> .)

    param_list                     shift and go to state 29
    var_type                       shift and go to state 30
    empty                          shift and go to state 31

state 9

    (7) declaration -> statement . SEMICOLON

    SEMICOLON       shift and go to state 32


state 10

    (8) declaration -> command .

    USE             reduce using rule 8 (declaration -> command .)
    PACKAGE         reduce using rule 8 (declaration -> command .)
    SUB             reduce using rule 8 (declaration -> command .)
    RETURN          reduce using rule 8 (declaration -> command .)
    PRINT           reduce using rule 8 (declaration -> command .)
    ID              reduce using rule 8 (declaration -> command .)
    AMPERSANT       reduce using rule 8 (declaration -> command .)
    IF              reduce using rule 8 (declaration -> command .)
    WHILE           reduce using rule 8 (declaration -> command .)
    FOR             reduce using rule 8 (declaration -> command .)
    MY              reduce using rule 8 (declaration -> command .)
    LPAREN          reduce using rule 8 (declaration -> command .)
    DOLLAR          reduce using rule 8 (declaration -> command .)
    AT              reduce using rule 8 (declaration -> command .)
    PERCENT         reduce using rule 8 (declaration -> command .)
    $end            reduce using rule 8 (declaration -> command .)


state 11

    (29) statement -> var_declaration .

    SEMICOLON       reduce using rule 29 (statement -> var_declaration .)


state 12

    (30) statement -> var_assignment .

    SEMICOLON       reduce using rule 30 (statement -> var_assignment .)


state 13

    (41) statement -> RETURN . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 33


state 14

    (44) statement -> PRINT . STRING

    STRING          shift and go to state 34


state 15

    (49) statement -> AMPERSANT . ID LPAREN expression_list RPAREN

    ID              shift and go to state 35


state 16

    (42) command -> IF . LPAREN relop RPAREN LBLOCK statement_list RBLOCK
    (43) command -> IF . LPAREN relop RPAREN LBLOCK statement_list RBLOCK ELSE LBLOCK statement_list RBLOCK

    LPAREN          shift and go to state 36


state 17

    (45) command -> WHILE . LPAREN relop RPAREN LBLOCK statement_list RBLOCK

    LPAREN          shift and go to state 37


state 18

    (46) command -> FOR . LPAREN var_declaration SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK
    (47) command -> FOR . LPAREN var_assignment SEMICOLON relop SEMICOLON var_assignment RPAREN LBLOCK statement_list RBLOCK

    LPAREN          shift and go to state 38


state 19

    (31) var_declaration -> MY . var_type
    (32) var_declaration -> MY . var_type assign_type expression
    (33) var_declaration -> MY . LPAREN param_list RPAREN
    (34) var_declaration -> MY . LPAREN param_list RPAREN assign_type expression
    (35) var_declaration -> MY . var_type assign_type LPAREN expression_list RPAREN
    (36) var_declaration -> MY . LPAREN param_list RPAREN assign_type LPAREN expression_list RPAREN
    (14) var_type -> . DOLLAR ID
    (15) var_type -> . AT ID
    (16) var_type -> . PERCENT ID

    LPAREN          shift and go to state 40
    DOLLAR          shift and go to state 21
    AT              shift and go to state 22
    PERCENT         shift and go to state 23

    var_type                       shift and go to state 39

state 20

    (37) var_assignment -> var_type . assign_type expression
    (38) var_assignment -> var_type . LBRACKET expression RBRACKET assign_type expression
    (39) var_assignment -> var_type . assign_type LPAREN expression_list RPAREN
    (17) assign_type -> . ASSIGN
    (18) assign_type -> . PLUS_ASSIGN
    (19) assign_type -> . MINUS_ASSIGN
    (20) assign_type -> . MULTIPLY_ASSIGN
    (21) assign_type -> . DIVIDE_ASSIGN
    (22) assign_type -> . MOD_ASSIGN
    (23) assign_type -> . POW_ASSIGN

    LBRACKET        shift and go to state 42
    ASSIGN          shift and go to state 43
    PLUS_ASSIGN     shift and go to state 44
    MINUS_ASSIGN    shift and go to state 45
    MULTIPLY_ASSIGN shift and go to state 46
    DIVIDE_ASSIGN   shift and go to state 47
    MOD_ASSIGN      shift and go to state 48
    POW_ASSIGN      shift and go to state 49

    assign_type                    shift and go to state 41

state 21

    (14) var_type -> DOLLAR . ID

    ID              shift and go to state 50


state 22

    (15) var_type -> AT . ID

    ID              shift and go to state 51


state 23

    (16) var_type -> PERCENT . ID

    ID              shift and go to state 52


state 24

    (2) declaration_list -> declaration_list declaration .

    USE             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    PACKAGE         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    SUB             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    RETURN          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    PRINT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    ID              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    AMPERSANT       reduce using rule 2 (declaration_list -> declaration_list declaration .)
    IF              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    WHILE           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FOR             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    MY              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    LPAREN          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    DOLLAR          reduce using rule 2 (declaration_list -> declaration_list declaration .)
    AT              reduce using rule 2 (declaration_list -> declaration_list declaration .)
    PERCENT         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 25

    (4) declaration -> USE ID . SEMICOLON

    SEMICOLON       shift and go to state 53


state 26

    (48) statement -> ID LPAREN . expression_list RPAREN
    (50) expression_list -> . expression comma_expression
    (51) expression_list -> . empty
    (55) expression -> . expression PLUS expression
    (56) expression -> . expression MINUS expression
    (57) expression -> . expression TIMES expression
    (58) expression -> . expression DIVIDE expression
    (59) expression -> . expression MODULUS expression
    (60) expression -> . INTEGER
    (61) expression -> . HEX
    (62) expression -> . FLOAT
    (63) expression -> . STRING
    (64) expression -> . LPAREN expression RPAREN
    (65) expression -> . ID LPAREN expression_list RPAREN
    (66) expression -> . DOLLAR ID LBRACKET expression RBRACKET
    (67) expression -> . var_type
    (68) expression -> . MINUS expression
    (69) expression -> . PLUS expression
    (89) empty -> .
    (14) var_type -> . DOLLAR ID
    (15) var_type -> . AT ID
    (16) var_type -> . PERCENT ID

    INTEGER         shift and go to state 61
    HEX             shift and go to state 62
    FLOAT           shift and go to state 63
    STRING          shift and go to state 64
    LPAREN          shift and go to state 55
    ID              shift and go to state 54
    DOLLAR          shift and go to state 65
    MINUS           shift and go to state 60
    PLUS            shift and go to state 59
    RPAREN          reduce using rule 89 (empty -> .)
    AT              shift and go to state 22
    PERCENT         shift and go to state 23
